refactor: update blog articles to remove duplicated images

--- a/blog/ar/4-cas-ou-le-don-de-sang-est-strictement-interdit-au-maroc-explications-et-raisons-medicales.mdx
+++ b/blog/ar/4-cas-ou-le-don-de-sang-est-strictement-interdit-au-maroc-explications-et-raisons-medicales.mdx
@@ -1,11 +1,11 @@
 ---
-title: "1. إذا كنت قد تعرضت لحقن دم في الماضي"
-slug: "4-cas-ou-le-don-de-sang-est-strictement-interdit-au-maroc-explications-et-raisons-medicales"
-excerpt: "التبرع بالدم يمثل جزءاً أساسياً في إنقاذ الأرواح، لكن بعض الحالات تتطلب احتياطات معينة. من المهم فهم لماذا يجب على بعض الأشخاص تجنب التبرع بالدم لضمان سلامة المتلقين."
-publishDate: "2025-03-10"
-author: "Collectif Don de Sang Maroc"
-coverImage: "/blog/blood-donation-restrictions-alt.jpg"
-tags: ["التبرع-بالدم"]
+title: '1. إذا كنت قد تعرضت لحقن دم في الماضي'
+slug: '4-cas-ou-le-don-de-sang-est-strictement-interdit-au-maroc-explications-et-raisons-medicales'
+excerpt: 'التبرع بالدم يمثل جزءاً أساسياً في إنقاذ الأرواح، لكن بعض الحالات تتطلب احتياطات معينة. من المهم فهم لماذا يجب على بعض الأشخاص تجنب التبرع بالدم لضمان سلامة المتلقين.'
+publishDate: '2025-03-10'
+author: 'Zineb Ramiche'
+coverImage: '/blog/blood-donation-restrictions.jpg'
+tags: ['التبرع-بالدم']
 ---
 
 إن التبرع بالدم هو عمل تضامني ينقذ حياة الكثيرين، ولكن هناك حالات يكون فيها من الضروري عدم المشاركة. ولضمان سلامة المتبرعين، يتم تطبيق معايير طبية صارمة. تعرّف على أهم أربعة موانع رئيسية للتبرع بالدم في المغرب، ولماذا تجعل بعض الحالات الصحية من التبرع بالدم أمراً شديد الخطورة.
