--- a/blog/ar/601-donneurs-de-sang-en-une-semaine-une-mobilisation-exemplaire-en-ce-mois-de-ramadan.mdx
+++ b/blog/ar/601-donneurs-de-sang-en-une-semaine-une-mobilisation-exemplaire-en-ce-mois-de-ramadan.mdx
@@ -1,11 +1,11 @@
 ---
-title: "[طنجة] 601 متبرع بالدم في أسبوع: حملة مثالية في هذا الشهر الفضيل."
-slug: "601-donneurs-de-sang-en-une-semaine-une-mobilisation-exemplaire-en-ce-mois-de-ramadan"
-excerpt: "أطلقت وكالة الدم المغربية ومشتقاته في جهة طنجة-تطوان-الحسيمة حملة تبرع بالدم في شهر رمضان بالتنسيق مع مندوبية الشؤون الإسلامية، حيث تم تسجيل 601 متبرع في الأسبوع الأول. تهدف الحملة إلى تعزيز التضامن وتلبية احتياجات المستشفيات."
-publishDate: "2025-03-08"
-author: "Collectif Don de Sang Maroc"
-coverImage: "/blog/blood-donation-campaign.jpg"
-tags: ["التبرع-بالدم", "حملة-التبرع-بالدم", "طنجة"]
+title: '[طنجة] 601 متبرع بالدم في أسبوع: حملة مثالية في هذا الشهر الفضيل.'
+slug: '601-donneurs-de-sang-en-une-semaine-une-mobilisation-exemplaire-en-ce-mois-de-ramadan'
+excerpt: 'أطلقت وكالة الدم المغربية ومشتقاته في جهة طنجة-تطوان-الحسيمة حملة تبرع بالدم في شهر رمضان بالتنسيق مع مندوبية الشؤون الإسلامية، حيث تم تسجيل 601 متبرع في الأسبوع الأول. تهدف الحملة إلى تعزيز التضامن وتلبية احتياجات المستشفيات.'
+publishDate: '2025-03-08'
+author: 'Zineb Ramiche'
+coverImage: '/blog/blood-donation-campaign.jpg'
+tags: ['التبرع-بالدم', 'حملة-التبرع-بالدم', 'طنجة']
 ---
 
 أطلقت وكالة الدم المغربية ومشتقاته في جهة طنجة-تطوان-الحسيمة، بالتنسيق مع مندوبية الشؤون الإسلامية، حملة تبرع بالدم كبيرة خلال هذا الشهر الفضيل. تهدف هذه المبادرة إلى تلبية الاحتياجات العاجلة للمستشفيات، بالإضافة إلى تشجيع المواطنين على المشاركة في هذا العمل التضامني.
@@ -14,7 +14,7 @@ tags: ["التبرع-بالدم", "حملة-التبرع-بالدم", "طنجة"
 
 كل ليلة، بعد صلاة العشاء، تنظم حملات التبرع بالدم في مسجدين في مدينة طنجة. هذه الحملة تتيح للمصلين فرصة المساهمة في هذه القضية النبيلة بعد أداء صلواتهم. بفضل تنظيم جيد وبدعم من فريق مخصص، يتكون من مختصين في الصحة ومتطوعين، تجري عمليات التبرع في ظروف مثالية، مما يضمن سلامة وراحة المتبرعين.
 
-**مشاركة قوية منذ الأسبوع الأول** 
+**مشاركة قوية منذ الأسبوع الأول**
 
 حماسة المصلين كانت واضحة: 601 شخصًا تبرعوا بالدم في الأسبوع الأول، وهو رقم واعد يعكس الكرم وروح التضامن التي تميز هذا الشهر الكريم.
 
