--- a/blog/ar/donner-son-sang-une-etude-revele-ses-bienfaits-pour-la-sante.mdx
+++ b/blog/ar/donner-son-sang-une-etude-revele-ses-bienfaits-pour-la-sante.mdx
@@ -1,11 +1,11 @@
 ---
-title: "دراسة على رجال الإطفاء المعرضين للـ PFAS"
-slug: "donner-son-sang-une-etude-revele-ses-bienfaits-pour-la-sante"
-excerpt: "كشفت دراسة علمية جديدة أن التبرع بالدم قد يكون له فوائد صحية. فهو يساعد على التخلص من بعض المواد السامة الموجودة في الجسم."
-publishDate: "2025-03-08"
-author: "Collectif Don de Sang Maroc"
-coverImage: "/blog/blood-donation-health-benefits-alt.webp"
-tags: ["التبرع-بالدم", "دراسة"]
+title: 'دراسة على رجال الإطفاء المعرضين للـ PFAS'
+slug: 'donner-son-sang-une-etude-revele-ses-bienfaits-pour-la-sante'
+excerpt: 'كشفت دراسة علمية جديدة أن التبرع بالدم قد يكون له فوائد صحية. فهو يساعد على التخلص من بعض المواد السامة الموجودة في الجسم.'
+publishDate: '2025-03-08'
+author: 'Zineb Ramiche'
+coverImage: '/blog/blood-donation-health-benefits.webp'
+tags: ['التبرع-بالدم', 'دراسة']
 ---
 
 ### **دراسة على رجال الإطفاء المعرضين للـ PFAS**
@@ -14,9 +14,9 @@ tags: ["التبرع-بالدم", "دراسة"]
 
 أجريت الدراسة على **285 رجل إطفاء أسترالي**، وهم فئة مهنية معرّضة بشدة لهذه المركبات. تم تقسيم المشاركين إلى ثلاثة مجموعات:
 
-- مجموعة تبرعت بالبلازما كل 6 أسابيع.
-- مجموعة تبرعت بالدم الكامل كل 12 أسبوعًا.
-- مجموعة لم تتبرع بالدم.
+-   مجموعة تبرعت بالبلازما كل 6 أسابيع.
+-   مجموعة تبرعت بالدم الكامل كل 12 أسبوعًا.
+-   مجموعة لم تتبرع بالدم.
 
 قام الباحثون بقياس مستويات **حمض السلفونيك المشبع بالفلور (PFOS)** و**حمض الهكسان السلفوني المشبع بالفلور (PFHxS)** في دم المشاركين في بداية الدراسة، ثم بعد **12 شهرًا**.
 
