--- a/blog/ar/interview-maraoune-salhi-comment-son-groupe-facebook-encourage-des-milliers-de-marocains-a-faire-un-don-de-sang.mdx
+++ b/blog/ar/interview-maraoune-salhi-comment-son-groupe-facebook-encourage-des-milliers-de-marocains-a-faire-un-don-de-sang.mdx
@@ -1,28 +1,28 @@
 ---
-title: "[مقابلة] مراون الصالحي: كيف يشجع جروبه فيسبوك آلاف المغاربة على التبرع بالدم"
-slug: "interview-maraoune-salhi-comment-son-groupe-facebook-encourage-des-milliers-de-marocains-a-faire-un-don-de-sang"
-excerpt: "في هذه المقابلة، يشاركنا أدمن جروب ”Alliance des Donneurs de Sang au Maroc“ على فيسبوك قصة هذه المبادرة التي تم إطلاقه في عام 2020. وبفضل التزامه، أنقذ جروب العديد من الأرواح، مما يدل على التأثير الإيجابي للشبكات الاجتماعية في قضايا التضامن."
-publishDate: "2025-03-24"
-author: "Collectif Don de Sang Maroc"
-coverImage: "/blog/facebook-group-interview.jpeg"
-tags: ["التبرع-بالدم", "مقابلة"]
+title: '[مقابلة] مراون الصالحي: كيف يشجع جروبه فيسبوك آلاف المغاربة على التبرع بالدم'
+slug: 'interview-maraoune-salhi-comment-son-groupe-facebook-encourage-des-milliers-de-marocains-a-faire-un-don-de-sang'
+excerpt: 'في هذه المقابلة، يشاركنا أدمن جروب ”Alliance des Donneurs de Sang au Maroc“ على فيسبوك قصة هذه المبادرة التي تم إطلاقه في عام 2020. وبفضل التزامه، أنقذ جروب العديد من الأرواح، مما يدل على التأثير الإيجابي للشبكات الاجتماعية في قضايا التضامن.'
+publishDate: '2025-03-24'
+author: 'Zineb Ramiche'
+coverImage: '/blog/facebook-group-interview.jpeg'
+tags: ['التبرع-بالدم', 'مقابلة']
 ---
 
-**كيف خطرت لك فكرة إنشاء هذا جروب على فيسبوك لتنظيم حملات التبرع بالدم؟** 
+**كيف خطرت لك فكرة إنشاء هذا جروب على فيسبوك لتنظيم حملات التبرع بالدم؟**
 
-*”خلال فترة عملي في مركز نقل الدم في وجدة في مختبر أمراض الدم المناعية، واجهت حالة طارئة: كان أحد أقاربي في حاجة ماسة إلى الدم. عندها أدركت مدى نقص الاحتياطيات. لذلك أردت إنشاء منصة لتسهيل التبرع ومساعدة الأشخاص الآخرين في الحالات الحرجة. لقد تبرعت بالدم بنفسي في عدد من المناسبات، وأدركت أهمية هذه البادرة وتأثيرها على حياة المرضى الذين ينتظرون. ”*
+_”خلال فترة عملي في مركز نقل الدم في وجدة في مختبر أمراض الدم المناعية، واجهت حالة طارئة: كان أحد أقاربي في حاجة ماسة إلى الدم. عندها أدركت مدى نقص الاحتياطيات. لذلك أردت إنشاء منصة لتسهيل التبرع ومساعدة الأشخاص الآخرين في الحالات الحرجة. لقد تبرعت بالدم بنفسي في عدد من المناسبات، وأدركت أهمية هذه البادرة وتأثيرها على حياة المرضى الذين ينتظرون. ”_
 
-**كيف قمتم بالتواصل مع الأعضاء الأوائل والبدء في تعبئة الجروب؟** 
+**كيف قمتم بالتواصل مع الأعضاء الأوائل والبدء في تعبئة الجروب؟**
 
-*”لقد اتصلنا بالجمعيات المحلية والنوادي الصحية والمستشفيات ومراكز نقل الدم حتى يتمكنوا من تمرير المعلومات. وقد كان هذا التعاون ضرورياً في الدعاية لمبادرتنا وتشجيع التبرعات.“*
+_”لقد اتصلنا بالجمعيات المحلية والنوادي الصحية والمستشفيات ومراكز نقل الدم حتى يتمكنوا من تمرير المعلومات. وقد كان هذا التعاون ضرورياً في الدعاية لمبادرتنا وتشجيع التبرعات.“_
 
-**كيف تتفاعل مع طلبات الأعضاء وأسئلتهم ومناقشاتهم؟** 
+**كيف تتفاعل مع طلبات الأعضاء وأسئلتهم ومناقشاتهم؟**
 
-*”كل يوم، أخصص وقتًا لقراءة منشورات الأعضاء وتعليقاتهم ورسائلهم الخاصة. كما أنني أقوم بتفعيل الإشعارات لأكون على علم بالأنشطة الجديدة وأتفاعل بسرعة مع الطلبات العاجلة.“*
+_”كل يوم، أخصص وقتًا لقراءة منشورات الأعضاء وتعليقاتهم ورسائلهم الخاصة. كما أنني أقوم بتفعيل الإشعارات لأكون على علم بالأنشطة الجديدة وأتفاعل بسرعة مع الطلبات العاجلة.“_
 
 **هل هناك أي لحظة أو قصة أدهشتك بشكل خاص وحفزتك على الانخراط في هذا العمل؟**
 
-*”ذات يوم، شاركت إحدى الأمهات قصتها المؤلمة. فقد احتاج طفلها إلى نقل دم عاجل بعد تعرضه لحادث، وبفضل المتبرعين الذين حشدتهم المجموعة، تم إنقاذ حياته. وقد أعربت عن امتنانها الشديد، قائلةً إنه لولا هذا التضامن لما كان طفلها هنا اليوم.“*
+_”ذات يوم، شاركت إحدى الأمهات قصتها المؤلمة. فقد احتاج طفلها إلى نقل دم عاجل بعد تعرضه لحادث، وبفضل المتبرعين الذين حشدتهم المجموعة، تم إنقاذ حياته. وقد أعربت عن امتنانها الشديد، قائلةً إنه لولا هذا التضامن لما كان طفلها هنا اليوم.“_
 
 إن جروب ”Alliance des Donneurs de Sang au Maroc“ يوضح قوة مواقع التواصل الاجتماعي عندما يتم استخدامها لصالح المتبرعين بالدم. فجروب فيسبوك هو أكثر بكثير من مجرد منصة على الإنترنت: إنه جروب توحده قضية نبيلة، حيث يمكن لكل تبرع أن يحدث فرقاً بين الحياة والموت.
 
