--- a/blog/ar/le-japon-developpe-un-sang-artificiel-universel-une-revolution-medicale-en-marche.mdx
+++ b/blog/ar/le-japon-developpe-un-sang-artificiel-universel-une-revolution-medicale-en-marche.mdx
@@ -3,7 +3,7 @@ title: 'ابتكار علمي بإشراف ياباني'
 slug: 'le-japon-developpe-un-sang-artificiel-universel-une-revolution-medicale-en-marche'
 excerpt: 'حققت اليابان خطوة تاريخية في المجال الطبي عبر تطوير دم صناعي عالمي، متوافق مع جميع فصائل الدم. ويُعدّ هذا الابتكار إنجازاً غير مسبوق يُبشّر بتغيير جذري في أساليب الرعاية الصحية، خاصة في حالات الطوارئ والجراحة والكوارث الإنسانية.'
 publishDate: '2025-06-04'
-author: 'Collectif Don de Sang Maroc'
+author: 'Zineb Ramiche'
 coverImage: '/blog/artificial-blood-research.jpg'
 tags: ['التبرع-بالدم', 'بحث', 'تكنولوجيا', 'طبي']
 ---
