--- a/blog/ar/webinaire-leucemie-aigue-et-transfusion-dr-ameziane-hassani-khadija-explique-l-importance-du-don-de-sang.mdx
+++ b/blog/ar/webinaire-leucemie-aigue-et-transfusion-dr-ameziane-hassani-khadija-explique-l-importance-du-don-de-sang.mdx
@@ -1,11 +1,11 @@
 ---
-title: "ما هو اللوكيميا؟"
-slug: "webinaire-leucemie-aigue-et-transfusion-dr-ameziane-hassani-khadija-explique-l-importance-du-don-de-sang"
-excerpt: "الدكتورة أمزيان حساني خديجة تتحدّثت عن الجوانب المختلفة لمرض اللوكيميا، أشكاله، أعراضه والحلول العلاجية المتوفرة. ووكذلك أكدت بشكل خاص على الدور الأساسي لعمليات نقل الدم، التي تساعد على استقرار حالة المرضى وتحسين مستوى صحتهم."
-publishDate: "2025-03-15"
-author: "Collectif Don de Sang Maroc"
-coverImage: "/blog/leukemia-webinar.jpg"
-tags: ["التبرع-بالدم", "مقابلة", "سرطان-الدم"]
+title: 'ما هو اللوكيميا؟'
+slug: 'webinaire-leucemie-aigue-et-transfusion-dr-ameziane-hassani-khadija-explique-l-importance-du-don-de-sang'
+excerpt: 'الدكتورة أمزيان حساني خديجة تتحدّثت عن الجوانب المختلفة لمرض اللوكيميا، أشكاله، أعراضه والحلول العلاجية المتوفرة. ووكذلك أكدت بشكل خاص على الدور الأساسي لعمليات نقل الدم، التي تساعد على استقرار حالة المرضى وتحسين مستوى صحتهم.'
+publishDate: '2025-03-15'
+author: 'Zineb Ramiche'
+coverImage: '/blog/leukemia-webinar.jpg'
+tags: ['التبرع-بالدم', 'مقابلة', 'سرطان-الدم']
 ---
 
 ## **ما هو اللوكيميا؟**
@@ -14,16 +14,16 @@ tags: ["التبرع-بالدم", "مقابلة", "سرطان-الدم"]
 
 1. **ابيضاض الدم النخاعي الحاد (AML):** نمو سريع لخلايا الدم البيضاء الشاذة التي تغزو الدم ونخاع العظم.
 2. **سرطان الدم الليمفاوي الحاد (ALL)**: يصيب الأطفال في الغالب، ويتطور بسرعة.
-3.  **ابيضاض الدم النخاعي المزمن (CML):** يتطور ببطء على مدى عدة سنوات، وتسببه طفرة جينية.
+3. **ابيضاض الدم النخاعي المزمن (CML):** يتطور ببطء على مدى عدة سنوات، وتسببه طفرة جينية.
 4. **ابيضاض الدم اللمفاوي المزمن (CLL):** يتطور ببطء ويصيب البالغين بشكل رئيسي.
 
 ## المخاطر والأعراض
 
 على الرغم من عدم تحديد سبب محدد، إلا أن هناك عوامل معينة تزيد من خطر الإصابة بسرطان الدم:
 
-- التعرض للمواد الكيميائية السامة (البنزين والمبيدات الحشرية).
-- التاريخ العائلي للإصابة بسرطان الدم.
-- اضطرابات الدم الموجودة مسبقاً.
+-   التعرض للمواد الكيميائية السامة (البنزين والمبيدات الحشرية).
+-   التاريخ العائلي للإصابة بسرطان الدم.
+-   اضطرابات الدم الموجودة مسبقاً.
 
 تشمل الأعراض الأكثر شيوعاً التعب الشديد والالتهابات المتكررة والنزيف غير الطبيعي وفقدان الوزن غير المبرر.
 
@@ -31,20 +31,20 @@ tags: ["التبرع-بالدم", "مقابلة", "سرطان-الدم"]
 
 يعتمد التشخيص على **فحوصات الدم وخزعات نخاع العظم**. يختلف العلاج وفقاً لنوع اللوكيميا وحالة المريض:
 
-- **العلاج الكيميائي**: أدوية تدمر الخلايا السرطانية.
-- **العلاج الإشعاعي:** أشعة سينية للقضاء على الخلايا المريضة.
-- **زراعة النخاع العظمي**: استبدال النخاع العظمي المريض بنخاع عظمي سليم.
-- **العلاجات الاستهدافية**: علاجات مبتكرة تستهدف تشوهات الخلايا.
+-   **العلاج الكيميائي**: أدوية تدمر الخلايا السرطانية.
+-   **العلاج الإشعاعي:** أشعة سينية للقضاء على الخلايا المريضة.
+-   **زراعة النخاع العظمي**: استبدال النخاع العظمي المريض بنخاع عظمي سليم.
+-   **العلاجات الاستهدافية**: علاجات مبتكرة تستهدف تشوهات الخلايا.
 
 ## الدور الحاسم لعمليات نقل الدم.
 
 بعد العلاج الكيميائي أو زراعة نخاع العظم، غالباً ما يعاني المرضى من **نقص في خلايا الدم**. وتلعب عمليات نقل الدم دوراً حيوياً في شفائهم:
 
-- **نقص خلايا الدم الحمراء (فقر الدم):** التعب الشديد وضيق التنفس والدوار.
-- **نقص خلايا الدم البيضاء (نقص المناعة):** زيادة خطر الإصابة بالتهابات خطيرة.
-- **نقص الصفائح الدموية (نقص الصفيحات)**: زيادة خطر النزيف والنزيف غير المنضبط.
+-   **نقص خلايا الدم الحمراء (فقر الدم):** التعب الشديد وضيق التنفس والدوار.
+-   **نقص خلايا الدم البيضاء (نقص المناعة):** زيادة خطر الإصابة بالتهابات خطيرة.
+-   **نقص الصفائح الدموية (نقص الصفيحات)**: زيادة خطر النزيف والنزيف غير المنضبط.
 
-تتيح عمليات نقل الدم إمكانية  **الحفاظ على استقرار حالة المريض** وتحسين نوعية الحياة وتحسين فرص الشفاء.
+تتيح عمليات نقل الدم إمكانية **الحفاظ على استقرار حالة المريض** وتحسين نوعية الحياة وتحسين فرص الشفاء.
 
 ## دعوة للتضامن
 
