--- a/blog/fr/4-cas-ou-le-don-de-sang-est-strictement-interdit-au-maroc-explications-et-raisons-medicales.mdx
+++ b/blog/fr/4-cas-ou-le-don-de-sang-est-strictement-interdit-au-maroc-explications-et-raisons-medicales.mdx
@@ -3,7 +3,7 @@ title: '4 Cas où le don de sang est strictement interdit au Maroc : Explication
 slug: '4-cas-ou-le-don-de-sang-est-strictement-interdit-au-maroc-explications-et-raisons-medicales'
 excerpt: 'Le don de sang est un geste essentiel pour sauver des vies, mais certaines situations nécessitent des précautions spécifiques. Il est important de comprendre pourquoi certaines personnes doivent éviter de donner leur sang pour garantir la sécurité des receveurs.'
 publishDate: '2025-03-10'
-author: 'Collectif Don de Sang Maroc'
+author: 'Zineb Ramiche'
 coverImage: '/blog/blood-donation-restrictions.jpg'
 tags: ['blood-donation', 'don-de-sang', 'التبرع-بالدم']
 ---
