--- a/blog/fr/601-donneurs-de-sang-en-une-semaine-une-mobilisation-exemplaire-en-ce-mois-de-ramadan.mdx
+++ b/blog/fr/601-donneurs-de-sang-en-une-semaine-une-mobilisation-exemplaire-en-ce-mois-de-ramadan.mdx
@@ -1,11 +1,11 @@
 ---
-title: "DES COLLECTES ORGANISÉES CHAQUE SOIR DANS LES MOSQUÉES"
-slug: "601-donneurs-de-sang-en-une-semaine-une-mobilisation-exemplaire-en-ce-mois-de-ramadan"
+title: 'DES COLLECTES ORGANISÉES CHAQUE SOIR DANS LES MOSQUÉES'
+slug: '601-donneurs-de-sang-en-une-semaine-une-mobilisation-exemplaire-en-ce-mois-de-ramadan'
 excerpt: "L'Agence Marocaine du Sang et de ses dérivés de la région Tanger-Tétouan-Al Hoceïma a lancé une campagne de don de sang pendant le mois de Ramadan, avec 601 donneurs enregistrés lors de la première semaine. L'initiative vise à renforcer la solidarité et à répondre aux besoins des hôpitaux."
-publishDate: "2025-03-08"
-author: "Collectif Don de Sang Maroc"
-coverImage: "/blog/blood-donation-campaign-alt.jpg"
-tags: ["collecte don de sang", "tanger"]
+publishDate: '2025-03-08'
+author: 'Zineb Ramiche'
+coverImage: '/blog/blood-donation-campaign.jpg'
+tags: ['collecte don de sang', 'tanger']
 ---
 
 L'**Agence Marocaine du Sang et de ses Dérivés** de la région **Tanger-Tétouan-Al Hoceïma**, en coordination avec la **Délégation des Affaires Islamiques**, a lancé une grande campagne de don de sang durant ce mois de Ramadan. Cette initiative vise à **répondre aux besoins urgents des hôpitaux** tout en encourageant les citoyens à s’impliquer dans cet élan de solidarité.
