--- a/blog/fr/le-japon-developpe-un-sang-artificiel-universel-une-revolution-medicale-en-marche.mdx
+++ b/blog/fr/le-japon-developpe-un-sang-artificiel-universel-une-revolution-medicale-en-marche.mdx
@@ -1,10 +1,10 @@
 ---
-title: "Une Innovation Signée par des Chercheurs Japonais"
-slug: "le-japon-developpe-un-sang-artificiel-universel-une-revolution-medicale-en-marche"
+title: 'Une Innovation Signée par des Chercheurs Japonais'
+slug: 'le-japon-developpe-un-sang-artificiel-universel-une-revolution-medicale-en-marche'
 excerpt: "Le Japon franchit une étape historique dans le domaine médical en développant un sang artificiel universel, compatible avec tous les groupes sanguins. Cette avancée promet de révolutionner la médecine d'urgence, la chirurgie et la gestion des catastrophes naturelles."
-publishDate: "2025-06-04"
-author: "Collectif Don de Sang Maroc"
-coverImage: "/blog/artificial-blood-research-alt.jpg"
+publishDate: '2025-06-04'
+author: 'Zineb Ramiche'
+coverImage: '/blog/artificial-blood-research.jpg'
 tags: []
 ---
 
@@ -18,10 +18,10 @@ Ce projet est porté par une équipe de chercheurs de l’**Université médical
 
 Ce sang artificiel pourrait transformer la manière dont les soins médicaux sont dispensés dans de nombreux contextes :
 
-- **Compatibilité universelle** : il peut être utilisé sans test de compatibilité préalable.
-- **Conservation prolongée** : jusqu’à **2 ans à température ambiante** (et jusqu'à 5 ans au froid), contre 42 jours pour le sang humain traditionnel.
-- **Réduction des risques infectieux** : aucun virus ou agent pathogène, grâce à un processus de purification strict.
-- **Atout majeur en situation d'urgence** : idéal pour les zones reculées, les catastrophes naturelles ou les conflits armés.
+-   **Compatibilité universelle** : il peut être utilisé sans test de compatibilité préalable.
+-   **Conservation prolongée** : jusqu’à **2 ans à température ambiante** (et jusqu'à 5 ans au froid), contre 42 jours pour le sang humain traditionnel.
+-   **Réduction des risques infectieux** : aucun virus ou agent pathogène, grâce à un processus de purification strict.
+-   **Atout majeur en situation d'urgence** : idéal pour les zones reculées, les catastrophes naturelles ou les conflits armés.
 
 ## Où en est la Recherche ?
 
