--- a/blog/fr/donner-son-sang-une-etude-revele-ses-bienfaits-pour-la-sante.mdx
+++ b/blog/fr/donner-son-sang-une-etude-revele-ses-bienfaits-pour-la-sante.mdx
@@ -1,11 +1,11 @@
 ---
-title: "UNE ETUDE SUR LES POMPIERS EXPOSÉS AUX PFAS"
-slug: "donner-son-sang-une-etude-revele-ses-bienfaits-pour-la-sante"
-excerpt: "Une étude australienne a démontré que le don de sang pourrait avoir des effets bénéfiques sur la santé. Il aiderait à éliminer certaines substances toxiques présentes dans l’organisme."
-publishDate: "2025-03-08"
-author: "Collectif Don de Sang Maroc"
-coverImage: "/blog/blood-donation-health-benefits.webp"
-tags: ["blood-donation", "don-de-sang", "etude", "التبرع-بالدم"]
+title: 'UNE ETUDE SUR LES POMPIERS EXPOSÉS AUX PFAS'
+slug: 'donner-son-sang-une-etude-revele-ses-bienfaits-pour-la-sante'
+excerpt: 'Une étude australienne a démontré que le don de sang pourrait avoir des effets bénéfiques sur la santé. Il aiderait à éliminer certaines substances toxiques présentes dans l’organisme.'
+publishDate: '2025-03-08'
+author: 'Zineb Ramiche'
+coverImage: '/blog/blood-donation-health-benefits.webp'
+tags: ['blood-donation', 'don-de-sang', 'etude', 'التبرع-بالدم']
 ---
 
 ### **UNE ETUDE SUR LES POMPIERS EXPOSÉS AUX PFAS**
@@ -14,9 +14,9 @@ Les PFAS sont des substances chimiques largement utilisées dans des produits in
 
 L’étude a été menée sur **285 pompiers australiens**, un groupe professionnel particulièrement exposé aux PFAS. Les participants ont été répartis en trois groupes :
 
-- **Un groupe donnant son plasma toutes les 6 semaines**
-- **Un groupe donnant son sang toutes les 12 semaines**
-- **Un groupe témoin sans don de sang**
+-   **Un groupe donnant son plasma toutes les 6 semaines**
+-   **Un groupe donnant son sang toutes les 12 semaines**
+-   **Un groupe témoin sans don de sang**
 
 Les chercheurs ont mesuré les niveaux de **perfluorooctane sulfonate (PFOS)** et de **perfluorohexane sulfonic acid (PFHxS)** dans le sang des participants au début de l’étude, puis après **12 mois**.
 
@@ -40,7 +40,7 @@ Cette découverte est donc particulièrement intéressante, car **aucune autre m
 
 Au-delà de ses bienfaits pour la communauté, cette étude montre que le don de sang pourrait aussi **aider les donneurs à réduire leur exposition aux substances toxiques**. Cela constitue **un nouvel argument en faveur du don régulier**, qui permet non seulement de sauver des vies, mais aussi **d’améliorer son propre bien-être**.
 
-Alors, pourquoi ne pas rendre visite au [centre de don de sang de votre ville](https://www.tabarro3.ma/#map) ? Donner son sang, c’est aussi prendre soin de sa santé ! 
+Alors, pourquoi ne pas rendre visite au [centre de don de sang de votre ville](https://www.tabarro3.ma/#map) ? Donner son sang, c’est aussi prendre soin de sa santé !
 
 ---
 
