--- a/blog/fr/interview-maraoune-salhi-comment-son-groupe-facebook-encourage-des-milliers-de-marocains-a-faire-un-don-de-sang.mdx
+++ b/blog/fr/interview-maraoune-salhi-comment-son-groupe-facebook-encourage-des-milliers-de-marocains-a-faire-un-don-de-sang.mdx
@@ -1,28 +1,28 @@
 ---
-title: "[Interview] Maraoune Salhi: Comment son groupe Facebook encourage des milliers de marocains à faire un don de sang"
-slug: "interview-maraoune-salhi-comment-son-groupe-facebook-encourage-des-milliers-de-marocains-a-faire-un-don-de-sang"
+title: '[Interview] Maraoune Salhi: Comment son groupe Facebook encourage des milliers de marocains à faire un don de sang'
+slug: 'interview-maraoune-salhi-comment-son-groupe-facebook-encourage-des-milliers-de-marocains-a-faire-un-don-de-sang'
 excerpt: "Dans cette interview, l'administrateur du groupe Facebook Alliance des Donneurs de Sang au Maroc partage l’histoire inspirante de cette initiative lancée en 2020. Grâce à son engagement, le groupe a sauvé de nombreuses vies, démontrant l'impact positif des réseaux sociaux dans des causes solidaires."
-publishDate: "2025-03-24"
-author: "Collectif Don de Sang Maroc"
-coverImage: "/blog/facebook-group-interview-alt.jpeg"
-tags: ["don-de-sang", "interview", "التبرع-بالدم"]
+publishDate: '2025-03-24'
+author: 'Zineb Ramiche'
+coverImage: '/blog/facebook-group-interview.jpeg'
+tags: ['don-de-sang', 'interview', 'التبرع-بالدم']
 ---
 
-**Comment avez-vous eu l'idée de créer ce groupe Facebook pour organiser les collectes de sang?** 
+**Comment avez-vous eu l'idée de créer ce groupe Facebook pour organiser les collectes de sang?**
 
- *« Durant mon stage au sein du Centre de Transfusion Sanguine d'Oujda, dans le laboratoire d'immuno-hématologie, j'ai été confronté à une situation d'urgence : un proche avait un besoin impératif de sang. C'est à ce moment-là que j'ai réalisé à quel point les réserves pouvaient être limitées. J'ai donc voulu créer un espace pour faciliter les dons et aider d'autres personnes en situation critique. J'ai moi-même fait don de mon sang à plusieurs reprises, comprenant l'importance de ce geste et l'impact qu'il pouvait avoir sur les vies des patients en attente. »*
+_« Durant mon stage au sein du Centre de Transfusion Sanguine d'Oujda, dans le laboratoire d'immuno-hématologie, j'ai été confronté à une situation d'urgence : un proche avait un besoin impératif de sang. C'est à ce moment-là que j'ai réalisé à quel point les réserves pouvaient être limitées. J'ai donc voulu créer un espace pour faciliter les dons et aider d'autres personnes en situation critique. J'ai moi-même fait don de mon sang à plusieurs reprises, comprenant l'importance de ce geste et l'impact qu'il pouvait avoir sur les vies des patients en attente. »_
 
-**Comment avez-vous attiré les premiers membres et commencé à mobiliser la communauté?** 
+**Comment avez-vous attiré les premiers membres et commencé à mobiliser la communauté?**
 
-*« Nous avons contacté des associations locales, des clubs de santé, des hôpitaux et des centres de transfusion sanguine pour qu'ils relaient l'information. Cette collaboration a été essentielle pour faire connaître notre initiative et encourager les dons. »*
+_« Nous avons contacté des associations locales, des clubs de santé, des hôpitaux et des centres de transfusion sanguine pour qu'ils relaient l'information. Cette collaboration a été essentielle pour faire connaître notre initiative et encourager les dons. »_
 
-**Comment gérez-vous les demandes, les questions et les discussions des membres?** 
+**Comment gérez-vous les demandes, les questions et les discussions des membres?**
 
-*« Chaque jour, je prends le temps de lire les publications, les commentaires et les messages privés des membres. De plus, j'active les notifications pour être alerté des nouvelles activités et réagir rapidement aux demandes urgentes. »* 
+_« Chaque jour, je prends le temps de lire les publications, les commentaires et les messages privés des membres. De plus, j'active les notifications pour être alerté des nouvelles activités et réagir rapidement aux demandes urgentes. »_
 
-**Y a-t-il des moments ou des témoignages qui vous ont particulièrement marqué et qui vous ont motivé à aller encore plus loin?** 
+**Y a-t-il des moments ou des témoignages qui vous ont particulièrement marqué et qui vous ont motivé à aller encore plus loin?**
 
-*« Un jour, une mère a partagé son histoire bouleversante. Son enfant avait besoin d'une transfusion urgente après un accident, et grâce aux donneurs mobilisés par le groupe, sa vie a été sauvée. Elle nous a exprimé une gratitude immense, affirmant que sans cette solidarité, son enfant ne serait plus là aujourd'hui. »*
+_« Un jour, une mère a partagé son histoire bouleversante. Son enfant avait besoin d'une transfusion urgente après un accident, et grâce aux donneurs mobilisés par le groupe, sa vie a été sauvée. Elle nous a exprimé une gratitude immense, affirmant que sans cette solidarité, son enfant ne serait plus là aujourd'hui. »_
 
 L'Alliance des Donneurs de Sang au Maroc illustre la puissance des réseaux sociaux lorsqu'ils sont utilisés de manière responsable. Ce groupe Facebook est bien plus qu'une simple plateforme en ligne : c'est une communauté unie par une cause noble, où chaque don peut faire la différence entre la vie et la mort.
 
