fix: update publish date and cover image for oujda blog article

--- a/blog/ar/region-de-l-oriental-campagnes-regionales-de-don-de-sang-programme-d-octobre-2025.mdx
+++ b/blog/ar/region-de-l-oriental-campagnes-regionales-de-don-de-sang-programme-d-octobre-2025.mdx
@@ -2,9 +2,9 @@
 title: '[جهة الشرق] حملات التبرع بالدم الإقليمية – برنامج أكتوبر 2025'
 slug: 'region-de-l-oriental-campagnes-regionales-de-don-de-sang-programme-d-octobre-2025'
 excerpt: 'في إطار الترويج للتبرع بالدم الطوعي والمنتظم، أعلنت الوكالة المغربية للدم ومشتقاته (AMSD) برنامجها الشهري لحملات التبرع بالدم لشهر أكتوبر 2025.'
-publishDate: '2025-03-10'
+publishDate: '2025-10-16'
 author: 'Zineb Ramiche'
-coverImage: '/blog/oujda.jpg'
+coverImage: '/blog/oujda.jpeg'
 tags: ['وجدة', 'جهة-الشرق]', 'التبرع-بالدم']
 ---
 
