--- a/blog/fr/region-de-l-oriental-campagnes-regionales-de-don-de-sang-programme-d-octobre-2025.mdx
+++ b/blog/fr/region-de-l-oriental-campagnes-regionales-de-don-de-sang-programme-d-octobre-2025.mdx
@@ -2,9 +2,9 @@
 title: '[Région de l’Oriental] Campagnes régionales de don de sang – Programme d’octobre 2025'
 slug: 'region-de-l-oriental-campagnes-regionales-de-don-de-sang-programme-d-octobre-2025'
 excerpt: 'Dans le cadre de la promotion du don de sang volontaire et régulier, l’Agence Marocaine du Sang et de ses Dérivés (AMSD), lance son programme mensuel des campagnes de don de sang pour le mois d’octobre 2025.'
-publishDate: '2025-03-10'
+publishDate: '2025-10-16'
 author: 'Zineb Ramiche'
-coverImage: '/blog/oujda.jpg'
+coverImage: '/blog/oujda.jpeg'
 tags: ['oujda', 'region-de-l-oriental']
 ---
 
