refactor: apply prettier format

--- a/blog/ar/rotaract-uemf-club-organizes-blood-donation-event.mdx
+++ b/blog/ar/rotaract-uemf-club-organizes-blood-donation-event.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'نادي روتاراكت ينظم حملة للتبرع بالدم بالجامعة الأورومتوسطية بفاس'
 slug: 'rotaract-uemf-club-organizes-blood-donation-event'
-excerpt: "في 25 و26 شتنبر، نظم نادي روتاركت بالجامعة الأورومتوسطية بفاس حملته العاشرة للتبرع بالدم، جامعًا مكونات المجتمع حول قضية حيوية، ومروجًا لمنصة tabarro3.ma التي تربط المرضى بالمتبرعين القريبين منهم."
+excerpt: 'في 25 و26 شتنبر، نظم نادي روتاركت بالجامعة الأورومتوسطية بفاس حملته العاشرة للتبرع بالدم، جامعًا مكونات المجتمع حول قضية حيوية، ومروجًا لمنصة tabarro3.ma التي تربط المرضى بالمتبرعين القريبين منهم.'
 publishDate: '2025-10-04'
 author: 'Nada Khoulani'
 coverImage: '/blog/rotaract-uemf.jpg'
@@ -10,7 +10,7 @@ tags: ['fes', 'blood-donation', 'club social', 'don-de-sang', 'التبرع-با
 
 ### إرث من الخدمة
 
-منذ إنشائه، نظم روتاركت  الجامعة الأورومتوسطية بفاس عشر حملات للتبرع بالدم داخل الحرم الجامعي و11 حملة بشكل عام، مما يجعله أحد أكثر الأندية الطلابية نشاطًا وتأثيرًا في الجامعة. وإلى جانب حملات التبرع بالدم، نفذ النادي العديد من المبادرات الاجتماعية والثقافية والإنسانية، مما عزز دوره كقائد في مجال مشاركة الطلاب وخدمة المجتمع.
+منذ إنشائه، نظم روتاركت الجامعة الأورومتوسطية بفاس عشر حملات للتبرع بالدم داخل الحرم الجامعي و11 حملة بشكل عام، مما يجعله أحد أكثر الأندية الطلابية نشاطًا وتأثيرًا في الجامعة. وإلى جانب حملات التبرع بالدم، نفذ النادي العديد من المبادرات الاجتماعية والثقافية والإنسانية، مما عزز دوره كقائد في مجال مشاركة الطلاب وخدمة المجتمع.
 
 ### tabarro3 تعزيز الابتكار مع
 
