--- a/blog/en/rotaract-uemf-club-organizes-blood-donation-event.mdx
+++ b/blog/en/rotaract-uemf-club-organizes-blood-donation-event.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Rotaract UEMF Hosts Blood Donation Campaign at Euromed University of Fes'
 slug: 'rotaract-uemf-club-organizes-blood-donation-event'
-excerpt: "On September 25–26, Rotaract UEMF held its 10th blood donation campaign at Euromed University of Fes, uniting the community around a life-saving cause and promoting tabarro3.ma, the platform that links patients with nearby donors."
+excerpt: 'On September 25–26, Rotaract UEMF held its 10th blood donation campaign at Euromed University of Fes, uniting the community around a life-saving cause and promoting tabarro3.ma, the platform that links patients with nearby donors.'
 publishDate: '2025-10-04'
 author: 'Nada Khoulani'
 coverImage: '/blog/rotaract-uemf.jpg'
