--- a/blog/fr/rotaract-uemf-club-organizes-blood-donation-event.mdx
+++ b/blog/fr/rotaract-uemf-club-organizes-blood-donation-event.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Le club Rotaract UEMF organise une campagne de don de sang à l’Université Euromed de Fès '
 slug: 'rotaract-uemf-club-organizes-blood-donation-event'
-excerpt: "OLe 25 et 26 septembre, le Rotaract UEMF a organisé sa 10ᵉ campagne de don de sang à l’Université Euromed de Fès, rassemblant la communauté autour d’une cause vitale et promouvant tabarro3.ma, la plateforme qui met en relation les patients avec des donneurs à proximité."
+excerpt: 'OLe 25 et 26 septembre, le Rotaract UEMF a organisé sa 10ᵉ campagne de don de sang à l’Université Euromed de Fès, rassemblant la communauté autour d’une cause vitale et promouvant tabarro3.ma, la plateforme qui met en relation les patients avec des donneurs à proximité.'
 publishDate: '2025-10-04'
 author: 'Nada Khoulani'
 coverImage: '/blog/rotaract-uemf.jpg'
