feat: implement daily campaign digest feature and update email templates
- Added a new endpoint for processing daily campaign digests, which will be triggered by a cron job.
- Introduced a new email template for sending campaign digests to participants.
- Replaced immediate campaign notification with digest addition in the campaign creation process.
- Updated various email links to use the correct domain.
- Removed the obsolete nearby campaign email template.

--- a/blog/ar/601-donneurs-de-sang-en-une-semaine-une-mobilisation-exemplaire-en-ce-mois-de-ramadan.mdx
+++ b/blog/ar/601-donneurs-de-sang-en-une-semaine-une-mobilisation-exemplaire-en-ce-mois-de-ramadan.mdx
@@ -26,4 +26,4 @@ tags: ['التبرع-بالدم', 'حملة-التبرع-بالدم', 'طنجة'
 
 مع هذا الانطلاقة المميزة، يأمل المنظمون في استدامة هذه الحملة وتشجيع المزيد من المواطنين على التبرع بالدم. في هذا الشهر الذي يتجلى فيه الكرم كمبدأ أساسي في قيم المجتمع، يصبح كل تبرع عملًا رمزيًا عظيمًا، يسمح بإنقاذ الأرواح وإعطاء الأمل للمرضى في حاجة.
 
-تستمر حملات التبرع طوال الشهر، مع الأمل في جذب المزيد من المتبرعين.برنامج [حملة التبرعات القادمة متاح هنا](https://www.tabarro3.ma/campaigns).
+تستمر حملات التبرع طوال الشهر، مع الأمل في جذب المزيد من المتبرعين.برنامج [حملة التبرعات القادمة متاح هنا](https://tabarro3.ma/campaigns).
