--- a/blog/ar/donner-son-sang-une-etude-revele-ses-bienfaits-pour-la-sante.mdx
+++ b/blog/ar/donner-son-sang-une-etude-revele-ses-bienfaits-pour-la-sante.mdx
@@ -36,7 +36,7 @@ tags: ['التبرع-بالدم', 'دراسة']
 
 إلى جانب فوائده للمجتمع، تُظهر هذه الدراسة أن التبرع بالدم قد **يساعد المتبرعين أنفسهم في تقليل تعرضهم للمواد السامة**. وهذا يشكل **حافزًا إضافيًا للتبرع بانتظام**، لأنه لا يُنقذ حياة الآخرين فحسب، بل **يساهم أيضًا في تحسين صحة المتبرعين**.
 
-إذن، [لماذا لا تبدأ اليوم](https://www.tabarro3.ma)؟ تبرعك بالدم ليس فقط لإنقاذ الآخرين، بل أيضًا للحفاظ على صحتك!
+إذن، [لماذا لا تبدأ اليوم](https://tabarro3.ma)؟ تبرعك بالدم ليس فقط لإنقاذ الآخرين، بل أيضًا للحفاظ على صحتك!
 
 ---
 
