--- a/blog/ar/webinaire-leucemie-aigue-et-transfusion-dr-ameziane-hassani-khadija-explique-l-importance-du-don-de-sang.mdx
+++ b/blog/ar/webinaire-leucemie-aigue-et-transfusion-dr-ameziane-hassani-khadija-explique-l-importance-du-don-de-sang.mdx
@@ -50,4 +50,4 @@ tags: ['التبرع-بالدم', 'مقابلة', 'سرطان-الدم']
 
 التبرع بالدم ضروري لمرضى سرطان الدم. من خلال التبرع بالدم، **يمكنك المساعدة في إنقاذ الأرواح** وتقديم الأمل للمرضى.
 
-اطلع على [**قائمة حملات التبرع بالدم القريبة منك**](https://www.tabarro3.ma/campaigns) وانضم إلى سلسلة التضامن هذه.
+اطلع على [**قائمة حملات التبرع بالدم القريبة منك**](https://tabarro3.ma/campaigns) وانضم إلى سلسلة التضامن هذه.
