--- a/blog/fr/601-donneurs-de-sang-en-une-semaine-une-mobilisation-exemplaire-en-ce-mois-de-ramadan.mdx
+++ b/blog/fr/601-donneurs-de-sang-en-une-semaine-une-mobilisation-exemplaire-en-ce-mois-de-ramadan.mdx
@@ -26,4 +26,4 @@ Ce bel élan de solidarité n’aurait pu être possible sans l’implication de
 
 Avec un tel départ, les organisateurs espèrent **pérenniser cette dynamique** et encourager encore plus de citoyens à donner leur sang. En ce mois où la générosité est au cœur des valeurs de la société, **chaque don devient un acte hautement symbolique**, permettant de sauver des vies et d’apporter de l’espoir aux patients dans le besoin.
 
-Les collectes se poursuivent tout au long du mois, avec l’espoir d’attirer toujours plus de donneurs. [**Le programme des prochaines collectes est disponible ici.**](https://www.tabarro3.ma/campaigns)
+Les collectes se poursuivent tout au long du mois, avec l’espoir d’attirer toujours plus de donneurs. [**Le programme des prochaines collectes est disponible ici.**](https://tabarro3.ma/campaigns)
