--- a/blog/fr/donner-son-sang-une-etude-revele-ses-bienfaits-pour-la-sante.mdx
+++ b/blog/fr/donner-son-sang-une-etude-revele-ses-bienfaits-pour-la-sante.mdx
@@ -40,7 +40,7 @@ Cette découverte est donc particulièrement intéressante, car **aucune autre m
 
 Au-delà de ses bienfaits pour la communauté, cette étude montre que le don de sang pourrait aussi **aider les donneurs à réduire leur exposition aux substances toxiques**. Cela constitue **un nouvel argument en faveur du don régulier**, qui permet non seulement de sauver des vies, mais aussi **d’améliorer son propre bien-être**.
 
-Alors, pourquoi ne pas rendre visite au [centre de don de sang de votre ville](https://www.tabarro3.ma/#map) ? Donner son sang, c’est aussi prendre soin de sa santé !
+Alors, pourquoi ne pas rendre visite au [centre de don de sang de votre ville](https://tabarro3.ma/#map) ? Donner son sang, c’est aussi prendre soin de sa santé !
 
 ---
 
