--- a/blog/fr/webinaire-leucemie-aigue-et-transfusion-dr-ameziane-hassani-khadija-explique-l-importance-du-don-de-sang.mdx
+++ b/blog/fr/webinaire-leucemie-aigue-et-transfusion-dr-ameziane-hassani-khadija-explique-l-importance-du-don-de-sang.mdx
@@ -50,4 +50,4 @@ Les transfusions sanguines permettent de **maintenir la stabilité de l'état du
 
 Le don de sang est essentiel pour les patients atteints de leucémie. En donnant votre sang, **vous pouvez contribuer à sauver des vies** et offrir un espoir aux malades.
 
-Consultez la [**liste des collectes près de chez vous**](https://www.tabarro3.ma/campaigns) et rejoignez cette chaîne de solidarité.
+Consultez la [**liste des collectes près de chez vous**](https://tabarro3.ma/campaigns) et rejoignez cette chaîne de solidarité.
