feat: Added a new article about association-meknassata-azzaytoune

--- a/blog/ar/4-cas-ou-le-don-de-sang-est-strictement-interdit-au-maroc-explications-et-raisons-medicales.mdx
+++ b/blog/ar/4-cas-ou-le-don-de-sang-est-strictement-interdit-au-maroc-explications-et-raisons-medicales.mdx
@@ -1,5 +1,5 @@
 ---
-title: '1. إذا كنت قد تعرضت لحقن دم في الماضي'
+title: '4 حالات ممنوع فيها التبرع بالدم في المغرب:  الأسباب الطبية'
 slug: '4-cas-ou-le-don-de-sang-est-strictement-interdit-au-maroc-explications-et-raisons-medicales'
 excerpt: 'التبرع بالدم يمثل جزءاً أساسياً في إنقاذ الأرواح، لكن بعض الحالات تتطلب احتياطات معينة. من المهم فهم لماذا يجب على بعض الأشخاص تجنب التبرع بالدم لضمان سلامة المتلقين.'
 publishDate: '2025-03-10'
