fix: articles apostrophe issues

--- a/blog/ar/region-de-rabat-sale-campagnes-regionales-de-don-de-sang-programme-de-decembre-2025.mdx
+++ b/blog/ar/region-de-rabat-sale-campagnes-regionales-de-don-de-sang-programme-de-decembre-2025.mdx
@@ -4,7 +4,7 @@ slug: 'region-de-rabat-sale-campagnes-regionales-de-don-de-sang-programme-de-dec
 excerpt: 'برنامج شهري لحملات التبرع بالدم تنظمه جمعية الأمل للمتبرعين بالدم بجهة الرباط سلا القنيطرة لشهر دجنبر 2025، بالتنسيق مع الوكالة المغربية للدم ومشتقاته بجهة الرباط سلا القنيطرة.'
 publishDate: '2025-11-30'
 author: 'Zineb Ramiche'
-coverImage: '/blog/rabat.jpeg'
+coverImage: '/blog/rabat.jpg'
 tags: ['الرباط', 'جهة-الرباط-سلا']
 ---
 
