--- a/blog/en/region-de-rabat-sale-campagnes-regionales-de-don-de-sang-programme-de-decembre-2025.mdx
+++ b/blog/en/region-de-rabat-sale-campagnes-regionales-de-don-de-sang-programme-de-decembre-2025.mdx
@@ -4,7 +4,7 @@ slug: 'region-de-rabat-sale-campagnes-regionales-de-don-de-sang-programme-de-dec
 excerpt: 'Monthly program of blood donation campaigns organized by the Al Amal Association of Blood Donors of the Rabat Salé Kénitra region for December 2025, in coordination with the Moroccan Agency for Blood and Blood Derivatives of the Rabat Salé Kénitra region.'
 publishDate: '2025-11-30'
 author: 'Zineb Ramiche'
-coverImage: '/blog/rabat.jpeg'
+coverImage: '/blog/rabat.jpg'
 tags: ['rabat', 'region-de-rabat-sale']
 ---
 
