--- a/blog/fr/region-de-rabat-sale-campagnes-regionales-de-don-de-sang-programme-de-decembre-2025.mdx
+++ b/blog/fr/region-de-rabat-sale-campagnes-regionales-de-don-de-sang-programme-de-decembre-2025.mdx
@@ -1,10 +1,10 @@
 ---
 title: '[Région de Rabat Salé Kénitra] Campagnes régionales de don de sang – Programme de décembre 2025'
 slug: 'region-de-rabat-sale-campagnes-regionales-de-don-de-sang-programme-de-decembre-2025'
-excerpt: 'Programme mensuel des campagnes de don du sang proposé par Association al Amal des Donneurs du Sang de la région de Rabat Salé Kénitra pour le mois de décembre 2025, en coordination avec l'Agence marocaine du sang et des dérivés de la région Rabat Salé Kénitra.'
+excerpt: "Programme mensuel des campagnes de don du sang proposé par Association al Amal des Donneurs du Sang de la région de Rabat Salé Kénitra pour le mois de décembre 2025, en coordination avec l'Agence marocaine du sang et des dérivés de la région Rabat Salé Kénitra."
 publishDate: '2025-11-30'
 author: 'Zineb Ramiche'
-coverImage: '/blog/rabat.jpeg'
+coverImage: '/blog/rabat.jpg'
 tags: ['rabat', 'region-de-rabat-sale']
 ---
 
