--- a/blog/fr/region-de-souss-massa-campagnes-regionales-de-don-de-sang-programme-de-decembre-2025.mdx
+++ b/blog/fr/region-de-souss-massa-campagnes-regionales-de-don-de-sang-programme-de-decembre-2025.mdx
@@ -1,7 +1,7 @@
 ---
 title: '[Région de Souss Massa ] Campagnes régionales de don de sang – Programme de décembre 2025'
 slug: 'region-de-souss-massa-campagnes-regionales-de-don-de-sang-programme-de-decembre-2025'
-excerpt: 'Programme mensuel des campagnes de don du sang proposé par Association al Amal des Donneurs du Sang de la région de Souss-Massa pour le mois de décembre 2025, en coordination avec l'Agence marocaine du sang et des dérivés de la région Souss-Massa.'
+excerpt: "Programme mensuel des campagnes de don du sang proposé par Association al Amal des Donneurs du Sang de la région de Souss-Massa pour le mois de décembre 2025, en coordination avec l'Agence marocaine du sang et des dérivés de la région Souss-Massa."
 publishDate: '2025-11-30'
 author: 'Zineb Ramiche'
 coverImage: '/blog/agadir.jpg'
